samples/_failures_safe/1761160435_0f5655_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abab0e6e.c: In function ‘main’:
./samples/SAFE/__tmp_abab0e6e.c:134:14: error: expected ‘;’ at end of input
  134 |         input
      |              ^
      |              ;
./samples/SAFE/__tmp_abab0e6e.c:134:9: error: expected declaration or statement at end of input
  134 |         input
      |         ^~~~~
./samples/SAFE/__tmp_abab0e6e.c:134:9: error: expected declaration or statement at end of input
